RESOLVED FIXED 247333
CRASH: Assertion in WPT /webvtt/rendering/cues-with-video/processing-model/regions/viewportanchor_y_50_percent.html
https://bugs.webkit.org/show_bug.cgi?id=247333
Summary CRASH: Assertion in WPT /webvtt/rendering/cues-with-video/processing-model/re...
Jer Noble
Reported 2022-11-01 13:22:02 PDT
CRASH: Assertion in WPT /webvtt/rendering/cues-with-video/processing-model/regions/viewportanchor_y_50_percent.html
Attachments
Jer Noble
Comment 1 2022-11-01 13:22:11 PDT
Jer Noble
Comment 2 2022-11-01 13:25:31 PDT
EWS
Comment 3 2022-11-04 22:34:13 PDT
Committed 256352@main (e4f004bdfd57): <https://commits.webkit.org/256352@main> Reviewed commits have been landed. Closing PR #6006 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.