CRASH: Assertion in WPT /webvtt/rendering/cues-with-video/processing-model/regions/viewportanchor_y_50_percent.html https://bugs.webkit.org/show_bug.cgi?id=247333 rdar://100892574

Reviewed by Eric Carlson.

An existing check protects HTMLMediaElement::configureTextTrackDisplay() from making script-exposed changes while a
Document and it's ActiveDOMObjects has been stopped, but also needs to protect when those same objects are Suspended.

Re-use HTMLMediaElement::isSuspended() (which encompasses both those above checks) everywhere within HTMLMediaElement.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::userCancelledLoad):
(WebCore::HTMLMediaElement::exitFullscreen):
(WebCore::HTMLMediaElement::configureTextTrackDisplay):
(WebCore::HTMLMediaElement::updateMediaControlsAfterPresentationModeChange):

Canonical link: https://commits.webkit.org/256352@main